<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:checkableBehavior="single">
    <!--自定日期查询-->
    <item
        android:id="@+id/search"
        android:icon="@drawable/outline_date_range_white_48"
        android:title="@string/date_range"
        app:showAsAction="ifRoom" />
    <!--设置-->
    <item
        android:id="@+id/setting"
        android:icon="@drawable/outline_settings_white_48"
        android:title="@string/setting"
        app:showAsAction="ifRoom" />
    <!--登出-->
        <item
            android:id="@+id/logout"
            android:icon="@drawable/outline_logout_white_48"
            android:title="@string/logout"
            app:showAsAction="ifRoom" />
    </group>
</menu>